...

val Context.dataStore: DataStore<Preferences> by preferencesDataStore(name = "settings")

@Serializable
data class PingConfig(
    val id: String = UUID.randomUUID().toString(),
    val name: String = "Ping!",
    val message: String = "notice the vividness of reality",
    val avgMinutes: Int = 45,
    val quietStartHour: Int = 22,
    val quietEndHour: Int = 8,
    val enabled: Boolean = true,
    val colorValue: Long = PingColors.defaultColor,
    val iconName: String = "bell",
...
